k8s/backend/community-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-backend
  namespace: apc-be-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: community-backend
  template:
    metadata:
      labels:
        app: community-backend
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - name: community-backend
        image: 192.168.0.169/alphacar-project/alphacar-community:1.0.0
        ports:
        - containerPort: 3005
          name: http-community # Istio 인식용 포트 이름
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: community-backend
  namespace: apc-be-ns
spec:
  selector:
    app: community-backend
  ports:
  - port: 3005
    targetPort: 3005
    protocol: TCP
    name: http-community # Istio 프로토콜 분석용 접두사 추가
  type: ClusterIP
