k8s/backend/main-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-backend
  namespace: apc-be-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-backend
  template:
    metadata:
      labels:
        app: main-backend
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - name: main-backend
        image: 192.168.0.169/kdh/alphacar-main:1.0.16
        ports:
        - containerPort: 3002
          name: http-main # Service와 이름을 맞추어 Istio 가시성 확보
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: main-backend
  namespace: apc-be-ns
spec:
  selector:
    app: main-backend
  ports:
  - name: http-main # Istio 프로토콜 분석용 접두사 유지
    port: 3002
    targetPort: 3002
    protocol: TCP
  type: ClusterIP
