k8s/backend/mypage-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mypage-backend
  namespace: apc-be-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mypage-backend
  template:
    metadata:
      labels:
        app: mypage-backend
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - name: mypage-backend
        image: 192.168.0.169/kdh/alphacar-mypage:1.0.1
        ports:
        - containerPort: 3006
          name: http-mypage # Istio 인식을 위한 포트 이름
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: mypage-backend
  namespace: apc-be-ns
spec:
  selector:
    app: mypage-backend
  ports:
  - port: 3006
    targetPort: 3006
    protocol: TCP
    name: http-mypage # Istio 프로토콜 분석용 접두사 추가
  type: ClusterIP
