k8s/backend/news-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-backend
  namespace: apc-be-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-backend
  template:
    metadata:
      labels:
        app: news-backend
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - name: drive-backend
        image: 192.168.0.169/alphacar-project/alphacar-drive:1.0.0
        ports:
        - containerPort: 3004
          name: http
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: news-backend
  namespace: apc-be-ns
spec:
  selector:
    app: news-backend
  ports:
  - name: http-news
    port: 3004
    targetPort: 3004
    protocol: TCP
  type: ClusterIP
