k8s/backend/quote-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quote-backend
  namespace: apc-be-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quote-backend
  template:
    metadata:
      labels:
        app: quote-backend
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - name: quote-backend
        image: 192.168.0.169/bh/alphacar-quote:1.0.0.85
        ports:
        - containerPort: 3003
          name: http
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: quote-backend
  namespace: apc-be-ns
spec:
  selector:
    app: quote-backend
  ports:
  - port: 3003
    targetPort: 3003
    protocol: TCP
  type: ClusterIP
