k8s/backend/search-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-backend
  namespace: apc-be-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-backend
  template:
    metadata:
      labels:
        app: search-backend
    spec:
      serviceAccountName: search-backend-sa
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - name: search-backend
        image: 192.168.0.170:30000/alphacar/alphacar-search:1.0.32-c1d0917
        ports:
        - containerPort: 3007
          name: http-search # 서비스 포트 이름과 통일
        command: ["sh", "-c"]
        args: ["node /app/dist/main.js"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: search-backend
  namespace: apc-be-ns
spec:
  selector:
    app: search-backend
  ports:
  - name: http-search
    port: 3007
    targetPort: 3007
    protocol: TCP
  type: ClusterIP
