k8s/backend/alphacar-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: alphacar-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  # [1] HTTP (80) 설정
  # Cloudflare가 HTTPS를 처리하므로, HTTP 요청을 그대로 처리 (리다이렉트 없음)
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - alphacar.cloud
    - www.alphacar.cloud

  # [2] HTTPS (443) 설정
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-ingressgateway-certs # Ingress Gateway가 자동 마운트하는 Secret
    hosts:
    - alphacar.cloud
    - www.alphacar.cloud
